fix comments width on small screens

--- a/css/default.css
+++ b/css/default.css
@@ -1327,6 +1327,11 @@
 		width: 90%!important;
 		height: 20em;
 	}
+
+	.carnival-comments
+	{
+		width: 100%!important;
+	}
 }
 
 /*Responsive resizing WTFTEENY*/
